fabric/testdata/out/ing_spp-product-search-rds-post-api-product-queries-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/product-queries\") \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"3802c424-e375-11e9-9959-0a1d439efe60","deployment-id":"d-a4z9cmmcah7jmdg3z8qmcza5a","pipeline-id":"l-hm6diyu6r83qkb7phpzcao5cz"},"name":"spp-product-search-rds-post-api-product-queries-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-rds.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-rds","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-product-se [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/product-queries") && Method("POST")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-09-30T14:49:22Z"
  generation: 1
  labels:
    controller-uid: 3802c424-e375-11e9-9959-0a1d439efe60
    deployment-id: d-a4z9cmmcah7jmdg3z8qmcza5a
    pipeline-id: l-hm6diyu6r83qkb7phpzcao5cz
  name: spp-product-search-rds-post-api-product-queries-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-rds
    uid: 3802c424-e375-11e9-9959-0a1d439efe60
  resourceVersion: "1357490008"
  uid: 7d9410f1-e391-11e9-9a79-0225683d17cc
spec:
  rules:
  - host: spp-product-search-rds.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-rds
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-rds-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-rds
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
